# radio2

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  Caddyfile  Caddyfile.docker  Dockerfile  Makefile  Pipfile  README.md  batch_add.py  docker-compose.builder.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  generate_icecast_xml.py  icecast-template.env  icecast-template.xml  pyproject.toml  requirements.txt  run_dev_server.sh  run_gunicorn_server.sh  run_stream.sh  stream.py
frontend/: .babelrc  .env.development  .prettierrc  Dockerfile  package.json  posthtml.config.js  tsconfig.json  tslint.json
frontend/lib/: react-bootstrap-editable
frontend/public/: index.html
frontend/src/: App.js  App.tsx  authContext.ts  index.css  index.html  index.js  index.tsx  store.js  store.ts  utils.js  utils.ts
frontend/src/api/: Schemas.tsx  index.ts  index.tsx
frontend/src/components/: Dialog.js  Dialog.tsx  Error.js  Error.tsx  ErrorBoundary.tsx  Loader.css  Loader.js  Loader.tsx  LoaderButton.tsx  LoaderSkeleton.tsx  LoaderSpinner.js  LoaderSpinner.tsx  LoggedInDropdown.js  LoggedInDropdown.tsx  LoginDropdown.js  LoginDropdown.tsx  LoginForm.css  LoginForm.js  LoginForm.tsx  LoginOpenId.tsx  MiniPlayer.css  MiniPlayer.js  MiniPlayer.tsx  (+10 more)
radio/: __init__.py  api.py  config.sample-docker.py  config.sample.py  database.py  models.py  static  stream.py
radio/common/: errors.py  pagination.py  schemas.py  users.py  utils.py
radio/controllers/: auth.py  now_playing.py  openid.py  songs.py
radio/templates/: index.html
radio/tests/: conftest.py  test_utils.py
tools/: Caddyfile  Caddyfile.docker  Caddyfile.docker.dev  batch_add.py  create_user.py  generate_environment.py  generate_icecast_xml.py  stream.py
(+23 files in other folders)
