[tool.poetry]
name = "radio_api"
version = "0.1.0"
description = ""
authors = ["russelg <drew.isaac2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6, <4"
flask-restful = "^0.3.7"
cython = "^0.29.14"
webargs = "^5.5.2"
pony = "^0.7.11"
arrow = "^0.15.4"
marshmallow = "^3.3.0"
flask = "^1.1.1"
filetype = "^1.0.5"
mutagen = "^1.43.0"
xmltodict = "^0.12.0"
jinja2 = "^2.10.3"
werkzeug = "^0.16.0"
psycopg2-binary = "^2.8.4"
Flask-JWT-Extended = "^3.24.1"
bcrypt = "^3.1.7"
gunicorn = "^20.0.4"
redis = "^3.3.11"
flask-redis = "^0.4.0"
shouty = {url = "https://github.com/edne/shouty/archive/master.zip"}

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
