[tool.poetry]
name = "radio_api"
version = "0.1.0"
description = ""
authors = ["russelg <drew.isaac2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
arrow = "^0.15.4"
bcrypt = "^3.1.7"
cython = "^0.29.14"
filetype = "^1.0.5"
flask = "^1.1.1"
Flask-JWT-Extended = "^3.24.1"
flask-redis = "^0.4.0"
flask-restful = "^0.3.7"
gunicorn = "^20.0.4"
jinja2 = "^2.10.3"
marshmallow = "^3.3.0"
mutagen = "^1.43.0"
pony = "^0.7.11"
psycopg2-binary = "^2.8.4"
redis = "^3.3.11"
shouty = {url = "https://github.com/edne/shouty/archive/master.zip"}
webargs = "^5.5.2"
werkzeug = "^0.16.0"
xmltodict = "^0.12.0"
Authlib = "^0.15.2"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
pylint = "^2.4.4"
pympler = "^0.8"
memory_profiler = "^0.57.0"
pytest = "^5.4.3"
coverage = "^5.1"
pytest-subprocess = "^0.1.4"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
